# excel_comparator

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  README_RU.md  TODO_bugs.md  architecture.md  main.py  project_structure.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
src/: __init__.py
src/analyzers/: __init__.py  list_analyzer.py
src/comparators/: __init__.py  _shared.py  advanced_comparator.py  basic_comparator.py
src/core/: __init__.py  config.py  engine.py  exceptions.py  interfaces.py
src/formatters/: __init__.py  csv_formatter.py  excel_formatter.py  html_formatter.py
src/gui/: __init__.py  main_window.py  widgets.py
src/loaders/: __init__.py  csv_loader.py  excel_loader.py
src/validators/: __init__.py  base_validators.py  csv_validators.py
tests/: conftest.py  test_advanced_comparator.py  test_basic_comparator.py  test_benchmarks.py  test_cli.py  test_config.py  test_csv_formatter.py  test_csv_integration.py  test_csv_properties.py  test_engine.py  test_fixtures_smoke.py  test_formatters.py  test_list_analyzer.py  test_loaders.py  test_properties.py  test_shared.py  test_snapshots.py  test_validators.py
